--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,7 +23,8 @@ section, summary, time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;}
+	vertical-align: baseline;
+	/*background-color:*/ ;}
 
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
@@ -36,6 +37,7 @@ body {
 ol, ul {
 	list-style: none;
 }
+
 
 blockquote, q {
 	quotes: none;
@@ -3125,7 +3127,11 @@ input, select, textarea {
 				}
 
 		/* Footer */
-
+				/* google map css */
+		#map {
+			width: 100%;
+			height: 100%;
+		  }
 			#footer .container {
 				padding: 3em 1em 1em 1em ;
 			}
