--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -119,7 +119,7 @@ input, select, textarea {
 
 		/* background color */
 	body, input, select, textarea {
-		background-color: #5d6d83;
+		background-color: #283d5a;
 		color: #6f7577;
 		font-family: "Raleway", "Helvetica", sans-serif;
 		font-size: 15pt;
@@ -3007,7 +3007,7 @@ input, select, textarea {
 		/* Header */
 
 			#header {
-				height: 80vh;
+				height: 65vh;
 			}
 
 				#header:after {
