added padding top
line 3019 main.css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3016,6 +3016,7 @@ input, select, textarea {
 
 				#header header {
 					padding-bottom: 0;
+					padding-top: 10px;
 				}
 
 					#header header h1 {
