--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -121,7 +121,7 @@ input, select, textarea {
 	body, input, select, textarea {
 		background-color: #283d5a;
 		color: #6f7577;
-		font-family: "Raleway", "Helvetica", sans-serif;
+		font-family: "Raleway", "Helvetica", cursive;
 		font-size: 15pt;
 		font-weight: 400;
 		line-height: 1.75em;
