--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2837,6 +2837,7 @@ input, select, textarea {
 				header.major {
 					background-color: #fff;
 					font-family: Arial, Helvetica, sans-serif ;
+					border-radius: 8px;
 				}
 				/* header letter specs  */
 			#header header p {
