--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,6 +26,8 @@ section, summary, time, mark, audio, video {
 	vertical-align: baseline;
 	/*background-color:*/ ;}
 
+	
+
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;}
@@ -171,8 +173,15 @@ input, select, textarea {
 		}
 
 	h2 {
+		color: #556064;
+		font-weight: 800;
+		letter-spacing: 0.075em;
+		line-height: 1em;
+		margin: 0 0 1em 0;
+		text-transform: uppercase;
 		font-size: 1.75em;
 		line-height: 1.5em;
+		background-color: #f5f5f5;
 	}
 
 	h3 {
@@ -2836,9 +2845,10 @@ input, select, textarea {
 
 				header.major {
 					background-color: #fff;
-					font-family: Arial, Helvetica, sans-serif ;
+					font-family: snell roundhand, cursive;
 					border-radius: 8px;
 				}
+				
 				/* header letter specs  */
 			#header header p {
 				color: #000000;
