created english site

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2820,8 +2820,8 @@ input, select, textarea {
 			padding-bottom: 8em;
 			vertical-align: middle;
 		}
-
-			#header header h1, #header header h2, #header header h3, #header header h4, #header header h5, #header header h6, #header header strong, #header header b {
+		/* removed h2*/
+			#header header h1, #header header #header header h3, #header header h4, #header header h5, #header header h6, #header header strong, #header header b {
 				color: #ffffff;
 			}
 
