--- a/style.css
+++ b/style.css
@@ -505,6 +505,34 @@ a,
 2. HEADER
 
 ************************************/
+/* Alert Button Css */
+/* The alert message box */
+.alert {
+	padding: 20px;
+	background: rgba(0, 0, 0, .5);
+	font-style:  'Garamond', serif;
+	color: white;
+	margin-bottom: 15px;
+  }
+  
+  /* The close button */
+  .closebtn {
+	margin-left: 15px;
+	color: white;
+	font-weight: bold;
+	float: right;
+	font-size: 22px;
+	line-height: 20px;
+	cursor: pointer;
+	transition: 0.3s;
+  }
+  
+  /* When moving the mouse over the close button */
+  .closebtn:hover {
+	color: black;
+  }
+  
+
 
 .navbar {
 	text-align: left;
